--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   speech_to_text: ^6.6.0
-  flutter_map: ^6.1.0
-  latlong2: ^0.9.0
+  google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
   shared_preferences: ^2.2.2
 
