--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   latlong2: ^0.9.0
   geolocator: ^10.1.0
   shared_preferences: ^2.2.2
+  audioplayers: ^5.2.0
+  flutter_tts: ^3.8.5
+
+
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +70,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
